--- a/website/css/styles.styl
+++ b/website/css/styles.styl
@@ -1,2 +1,40 @@
+html
+  padding: 0
+  margin : 0
+
+
 body
+  margin: 0
+  padding : 0
   background : lightgrey
+  color : white
+
+  .menu
+    border:1px solid red
+
+nav
+  display: flex
+  height: 100px
+  justify-content: space-between
+  align-items: center
+  background: #333333
+
+.filter
+  background-color: #333333
+  border:1px solid red
+
+.banner
+  display: flex
+  justify-content: center
+  align-items: flex-start
+  font-size: 60px
+  background-image: url('../images/background.jpeg')
+  background-size: cover
+  background-position: center center
+  background-repeat: no-repeat
+  background-color: #333333
+  padding: 0
+  margin : 0
+  width: 100%
+  height: 700px
+
