--- a/website/css/styles.styl
+++ b/website/css/styles.styl
@@ -2,32 +2,67 @@ html
   padding: 0
   margin : 0
 
-
 body
   margin: 0
   padding : 0
   background : lightgrey
-  color : white
+  color : #ffffff
 
-  .menu
-    border:1px solid red
+@font-face
+  font-family: Akrobat
+  src: url('../fonts/Akrobat-Regular.otf')
+
+@font-face
+  font-family: Akrobat-bold
+  src: url('../fonts/Akrobat-Bold.otf')
+
+@font-face
+  font-family: Akrobat-extraBold
+  src: url('../fonts/Akrobat-ExtraBold.otf')
+
+@font-face
+  font-family: Akrobat-semi
+  src: url('../fonts/Akrobat-SemiBold.otf')      
 
 nav
   display: flex
   height: 100px
-  justify-content: space-between
+  justify-content: space-around
   align-items: center
   background: #333333
 
+  .menu
+    flex: 0 0 600px
+    
+    ul 
+      display: flex
+      align-items: center
+      flex: 1
+      justify-content: space-around
+
+      li 
+        list-style: none
+
+        a
+          font-size: 22px
+          color: white
+          text-decoration: none
+          transition: .7s
+          font-family: Akrobat-extraBold
+
+        a:hover
+          color: #00aadd
+      
+
 .filter
   background-color: #333333
-  border:1px solid red
 
 .banner
   display: flex
   justify-content: center
   align-items: flex-start
   font-size: 60px
+  font-family: Akrobat
   background-image: url('../images/background.jpeg')
   background-size: cover
   background-position: center center
@@ -38,3 +73,93 @@ nav
   width: 100%
   height: 700px
 
+footer
+  display: flex
+  background-color : #221f1f
+  height: 400px
+  color : #00aadd
+  border:1px solid red
+
+  .footerContent
+    flex:1
+    display: flex
+    flex-direction: column
+    justify-content: space-around
+
+    .principalContent
+      display:flex
+      justify-content: space-around
+      align-items: center
+      padding: 0 100px 0 100px
+
+      .articulesContent
+        flex: 1
+        display: flex
+        justify-content: space-between
+        align-items: center
+
+        .footSection
+          display: flex
+          flex-direction : column
+
+          ul
+            padding:0
+            display:flex
+            flex-direction: column
+            justify-content: center
+            align-items: flex-start
+            li
+              padding: 0
+              margin: 0
+              list-style: none
+              a
+                font-size: 16px
+                padding: 0
+                margin: 0
+                text-decoration: none
+                color: #00aadd
+                font-family: Akrobat-extraBold  
+
+    .ubication
+      height: 200px
+      display:flex
+      flex-direction: row
+      border: 1px solid green
+      padding : 0 100px 0 100px
+
+      .ubicationContent
+        border:1px solid black           
+
+.subtitles
+  padding:0
+  margin:0
+  text-align: center
+  color: #ffffff
+  font-family: Akrobat-bold
+  font-size: 24px
+
+.newsletter
+  padding:20px
+  border:1px solid red
+  width: 280px  
+  
+  .newsContent
+    display: flex
+    height: 30px
+    color: white
+
+    .inputStyle
+      height : 30px
+      color: #00aadd
+
+    .inputStyle:focus 
+      outline : none
+    
+
+    .newsButton
+      height: 36px
+      color: #ffffff
+      background-color : #00aadd
+      border-style: none
+      font-family: Akrobat-extraBold
+      font-size: 18px
