--- a/website/css/styles.styl
+++ b/website/css/styles.styl
@@ -47,12 +47,13 @@ nav
         a:hover
           color: #00aadd
 
+  .iconContent
+    margin-right: 35px
     .burgerIcon
         display:none
         @media (max-width: 760px)
           cursor: pointer
           display:block
-          padding-right: 35px
 
   @media(max-width: 760px)
     justify-content: flex-start
@@ -70,7 +71,7 @@ nav
   display: flex
   justify-content: center
   align-items: flex-start
-  font-size: 5rem
+  font-size: 2.8rem
   font-family: Akrobat
   background-image: url('../images/background.jpeg')
   background-size: cover
